Corrección en la lógica de contratar artistas para una canción